<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.majorList.MajorListFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:descendantFocusability="blocksDescendants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:textSize="12dp"
                android:background="@color/grey"
                android:text="@string/it" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textStyle="bold"
                android:textSize="12dp"
                android:background="@color/grey"
                android:text="@string/law" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lawMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/humanities" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/humanMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/engineer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/engineerMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/science" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/scienceMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/biz" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bizMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/eco" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ecoMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/social" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/socialMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="12dp"
                android:textStyle="bold"
                android:background="@color/grey"
                android:text="@string/convergence" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/convergenceMajors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="5"
                tools:listitem="@layout/item_major"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>