<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.myInfo.MyInfoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/person_png" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_major" />

                <TextView
                    android:id="@+id/majorInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="전자정보공학부"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/openSourceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/open_source" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/developerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/developer" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/githubText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/github" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/recommendText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/recommend" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

    </LinearLayout>

</FrameLayout>